introduce a bunch of camera drivers: mediatek v4l2-adaptor and 3 more sensors of miatoll also rockchip gc8034 sensor

--- a/drivers/media/i2c/Makefile
+++ b/drivers/media/i2c/Makefile
@@ -141,3 +141,7 @@ obj-$(CONFIG_VIDEO_VP27SMPX) += vp27smpx.o
 obj-$(CONFIG_VIDEO_VPX3220) += vpx3220.o
 obj-$(CONFIG_VIDEO_WM8739) += wm8739.o
 obj-$(CONFIG_VIDEO_WM8775) += wm8775.o
+
+#obj-y += mtk/
+obj-$(CONFIG_OTP_EEPROM) += otp_eeprom.o
+obj-$(CONFIG_VIDEO_GC8034) += gc8034.o
