--- a/kernel/configs/aosp_rbx_sm8x50.config
+++ b/kernel/configs/aosp_rbx_sm8x50.config
@@ -1,205 +1,199 @@
-# Disable CONFIG_DRM_VKMS config set in base aosp_defconfig
-# CONFIG_DRM_VKMS is not set
-# XXX DB845c/RB3 bits start here
+CONFIG_ARM_QCOM_CPUFREQ_HW=m
 CONFIG_QRTR=m
+CONFIG_QRTR_SMD=m
 CONFIG_QRTR_TUN=m
-CONFIG_SCSI_UFS_QCOM=m
-CONFIG_INPUT_PM8941_PWRKEY=m
-CONFIG_SERIAL_MSM=m
-CONFIG_I2C_QCOM_GENI=m
-CONFIG_I2C_QUP=m
-CONFIG_PINCTRL_MSM=m
-CONFIG_PINCTRL_QCOM_SPMI_PMIC=m
-CONFIG_PINCTRL_SDM845=m
-CONFIG_POWER_RESET_QCOM_PON=m
-CONFIG_SYSCON_REBOOT_MODE=m
-CONFIG_QCOM_TSENS=m
-CONFIG_QCOM_WDT=m
-CONFIG_PM8916_WATCHDOG=m
-CONFIG_MFD_SPMI_PMIC=m
-CONFIG_SPMI_MSM_PMIC_ARB=m
-CONFIG_REGULATOR_QCOM_RPMH=m
-CONFIG_REGULATOR_QCOM_SPMI=m
-CONFIG_DRM_MSM=m
-# CONFIG_DRM_MSM_DSI_28NM_PHY is not set
-# CONFIG_DRM_MSM_DSI_20NM_PHY is not set
-# CONFIG_DRM_MSM_DSI_28NM_8960_PHY is not set
-CONFIG_DRM_LONTIUM_LT9611=m
-CONFIG_USB_OHCI_HCD=m
-CONFIG_USB_OHCI_HCD_PLATFORM=m
-# CONFIG_USB_DWC3_HAPS is not set
-# CONFIG_USB_DWC3_OF_SIMPLE is not set
-CONFIG_USB_GADGET_VBUS_DRAW=500
-# CONFIG_USB_DUMMY_HCD is not set
-CONFIG_USB_ROLE_SWITCH=m
-CONFIG_USB_ULPI_BUS=m
-CONFIG_MMC_SDHCI_MSM=m
-CONFIG_RTC_DRV_PM8XXX=m
-CONFIG_COMMON_CLK_QCOM=m
-CONFIG_SDM_GPUCC_845=m
-CONFIG_QCOM_CLK_RPMH=m
-CONFIG_SDM_DISPCC_845=m
-CONFIG_HWSPINLOCK_QCOM=m
-CONFIG_QCOM_LLCC=m
-CONFIG_QCOM_RMTFS_MEM=m
-CONFIG_QCOM_SMEM=m
-CONFIG_QCOM_SMSM=m
-CONFIG_EXTCON_USB_GPIO=m
-CONFIG_RESET_QCOM_AOSS=m
-CONFIG_RESET_QCOM_PDC=m
-CONFIG_PHY_QCOM_QMP=m
-CONFIG_PHY_QCOM_QUSB2=m
-CONFIG_PHY_QCOM_USB_HS=m
-CONFIG_NVMEM_QCOM_QFPROM=m
-CONFIG_INTERCONNECT_QCOM=y
-CONFIG_INTERCONNECT_QCOM_OSM_L3=m
-CONFIG_INTERCONNECT_QCOM_SDM845=m
-CONFIG_QCOM_RPMH=m
-CONFIG_QCOM_RPMHPD=m
+CONFIG_QRTR_MHI=m
+CONFIG_PCI_PWRCTL=m
+CONFIG_PCI_PWRCTL_PWRSEQ=m
+CONFIG_QCOM_SCM=m
+CONFIG_QCOM_FASTRPC=m
 CONFIG_WLAN_VENDOR_ATH=y
-CONFIG_ATH10K_AHB=y
 CONFIG_ATH10K=m
 CONFIG_ATH10K_PCI=m
+CONFIG_ATH10K_AHB=y
 CONFIG_ATH10K_SNOC=m
-CONFIG_QRTR_SMD=m
-CONFIG_QCOM_FASTRPC=m
-CONFIG_QCOM_APCS_IPC=m
-CONFIG_QCOM_Q6V5_COMMON=m
-CONFIG_QCOM_RPROC_COMMON=m
-CONFIG_QCOM_Q6V5_ADSP=m
-CONFIG_QCOM_Q6V5_MSS=m
-CONFIG_QCOM_Q6V5_PAS=m
-CONFIG_QCOM_Q6V5_WCSS=m
-CONFIG_QCOM_SYSMON=m
-CONFIG_RPMSG_QCOM_GLINK_SMEM=m
-CONFIG_RPMSG_QCOM_SMD=m
-CONFIG_QCOM_AOSS_QMP=m
-CONFIG_QCOM_SMP2P=m
-CONFIG_QCOM_SOCINFO=m
-CONFIG_QCOM_APR=m
-CONFIG_QCOM_GLINK_SSR=m
-CONFIG_RPMSG_QCOM_GLINK_RPM=m
-CONFIG_QCOM_PDC=m
-CONFIG_QCOM_SCM=m
-CONFIG_ARM_SMMU=m
-CONFIG_ARM_QCOM_CPUFREQ_HW=m
+CONFIG_ATH11K=m
+CONFIG_ATH11K_AHB=m
+CONFIG_ATH11K_PCI=m
+CONFIG_ATH12K=m
+CONFIG_TOUCHSCREEN_GOODIX_BERLIN_CORE=m
+CONFIG_TOUCHSCREEN_GOODIX_BERLIN_SPI=m
+CONFIG_INPUT_PM8941_PWRKEY=m
+CONFIG_SERIAL_MSM=m
 CONFIG_I2C_CHARDEV=m
 CONFIG_I2C_MUX=m
 CONFIG_I2C_MUX_PCA954x=m
+CONFIG_I2C_DESIGNWARE_CORE=m
 CONFIG_I2C_DESIGNWARE_PLATFORM=m
+CONFIG_I2C_QCOM_GENI=m
+CONFIG_I2C_QUP=m
 CONFIG_I2C_RK3X=m
 CONFIG_SPI_PL022=m
 CONFIG_SPI_QCOM_QSPI=m
 CONFIG_SPI_QUP=m
 CONFIG_SPI_QCOM_GENI=m
+CONFIG_SPMI_MSM_PMIC_ARB=m
+CONFIG_PINCTRL_MSM=m
+CONFIG_PINCTRL_SDM845=m
+CONFIG_PINCTRL_SM8250=m
+CONFIG_PINCTRL_SM8450=m
+CONFIG_PINCTRL_SM8550=m
+CONFIG_PINCTRL_SM8650=m
+CONFIG_PINCTRL_SM8250_LPASS_LPI=m
+CONFIG_PINCTRL_SM8450_LPASS_LPI=m
+CONFIG_PINCTRL_SM8550_LPASS_LPI=m
+CONFIG_PINCTRL_SM8650_LPASS_LPI=m
+CONFIG_PINCTRL_QCOM_SPMI_PMIC=m
+CONFIG_PINCTRL_LPASS_LPI=m
 CONFIG_GPIO_WCD934X=m
+CONFIG_POWER_RESET_QCOM_PON=m
+CONFIG_SYSCON_REBOOT_MODE=m
+CONFIG_POWER_SEQUENCING=m
+CONFIG_POWER_SEQUENCING_QCOM_WCN=m
+CONFIG_BATTERY_QCOM_BATTMGR=m
+CONFIG_QCOM_TSENS=m
+CONFIG_QCOM_SPMI_ADC_TM5=m
+CONFIG_QCOM_SPMI_TEMP_ALARM=m
+CONFIG_QCOM_LMH=m
+CONFIG_QCOM_WDT=m
+CONFIG_PM8916_WATCHDOG=m
+CONFIG_MFD_SPMI_PMIC=m
 CONFIG_MFD_WCD934X=m
 CONFIG_REGULATOR_GPIO=m
+CONFIG_REGULATOR_QCOM_RPMH=m
+CONFIG_REGULATOR_QCOM_SPMI=m
+CONFIG_REGULATOR_QCOM_USB_VBUS=m
+CONFIG_VIDEO_QCOM_VENUS=m
+CONFIG_DRM_MSM=m
+# CONFIG_DRM_MSM_DSI_28NM_PHY is not set
+# CONFIG_DRM_MSM_DSI_20NM_PHY is not set
+# CONFIG_DRM_MSM_DSI_28NM_8960_PHY is not set
+CONFIG_DRM_PANEL_VISIONOX_VTDR6130=m
+CONFIG_DRM_DISPLAY_CONNECTOR=m
+CONFIG_DRM_LONTIUM_LT9611=m
+CONFIG_DRM_LONTIUM_LT9611UXC=m
 CONFIG_SND_SOC_QCOM=m
 CONFIG_SND_SOC_QCOM_COMMON=m
+CONFIG_SND_SOC_QDSP6_ADM=m
+CONFIG_SND_SOC_QDSP6_AFE_DAI=m
+CONFIG_SND_SOC_QDSP6_AFE=m
+CONFIG_SND_SOC_QDSP6_ASM_DAI=m
+CONFIG_SND_SOC_QDSP6_ASM=m
 CONFIG_SND_SOC_QDSP6_COMMON=m
 CONFIG_SND_SOC_QDSP6_CORE=m
-CONFIG_SND_SOC_QDSP6_AFE=m
-CONFIG_SND_SOC_QDSP6_AFE_DAI=m
-CONFIG_SND_SOC_QDSP6_ADM=m
-CONFIG_SND_SOC_QDSP6_ROUTING=m
-CONFIG_SND_SOC_QDSP6_ASM=m
-CONFIG_SND_SOC_QDSP6_ASM_DAI=m
 CONFIG_SND_SOC_QDSP6=m
+CONFIG_SND_SOC_QDSP6_ROUTING=m
 CONFIG_SND_SOC_SDM845=m
+CONFIG_SND_SOC_SM8250=m
+CONFIG_SND_SOC_SC8280XP=m
 CONFIG_SND_SOC_DMIC=m
 CONFIG_SND_SOC_WCD9335=m
 CONFIG_SND_SOC_WCD934X=m
-CONFIG_SND_SOC_WSA881X=m
-CONFIG_QCOM_BAM_DMA=m
-CONFIG_QCOM_GPI_DMA=m
-CONFIG_SPMI_PMIC_CLKDIV=m
-CONFIG_SOUNDWIRE=m
-CONFIG_SOUNDWIRE_QCOM=m
-CONFIG_SLIMBUS=m
-CONFIG_SLIM_QCOM_NGD_CTRL=m
-CONFIG_VIDEO_QCOM_VENUS=m
-CONFIG_SDM_VIDEOCC_845=m
-CONFIG_QCOM_COMMAND_DB=m
-CONFIG_QCOM_LMH=m
-CONFIG_USB_XHCI_PCI_RENESAS=m
-# XXX RB5 bits start here
-CONFIG_QCOM_IPCC=m
-CONFIG_QCOM_SPMI_ADC5=m
-CONFIG_QCOM_SPMI_TEMP_ALARM=m
-CONFIG_RPMSG_NS=m
-CONFIG_CAN_MCP251XFD=m
-CONFIG_ATH11K=m
-CONFIG_ATH11K_AHB=m
-CONFIG_ATH11K_PCI=m
-CONFIG_PINCTRL_SM8250=m
-CONFIG_PINCTRL_SM8250_LPASS_LPI=m
-CONFIG_PINCTRL_LPASS_LPI=m
-CONFIG_QCOM_SPMI_ADC_TM5=m
-CONFIG_MFD_QCOM_QCA639X=m
-CONFIG_REGULATOR_QCOM_USB_VBUS=m
-CONFIG_DRM_DISPLAY_CONNECTOR=m
-CONFIG_DRM_LONTIUM_LT9611UXC=m
-CONFIG_SND_SOC_SM8250=m
-CONFIG_SND_SOC_LPASS_WSA_MACRO=m
-CONFIG_SND_SOC_LPASS_VA_MACRO=m
-CONFIG_TYPEC_QCOM_PMIC=m
-CONFIG_LEDS_QCOM_LPG=m
-CONFIG_SM_GPUCC_8250=m
-CONFIG_SM_DISPCC_8250=m
-CONFIG_SM_VIDEOCC_8250=m
-CONFIG_CLK_GFM_LPASS_SM8250=m
-CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=m
-CONFIG_INTERCONNECT_QCOM_SM8250=m
-CONFIG_CRYPTO_MICHAEL_MIC=m
-CONFIG_QCOM_CPR=m
-CONFIG_QCOM_SPM=m
-# XXX SM8450 bits start here
-CONFIG_INTERCONNECT_QCOM_SM8450=m
-CONFIG_PINCTRL_SM8450=m
-CONFIG_PINCTRL_SM8450_LPASS_LPI=m
-CONFIG_SM_CAMCC_8450=m
-CONFIG_SM_DISPCC_8450=m
-CONFIG_SM_GCC_8450=m
-CONFIG_SM_GPUCC_8450=m
-CONFIG_SM_VIDEOCC_8450=m
-CONFIG_POWER_SEQUENCING=y
-# SM8550 & SM8650 Common bits
-CONFIG_TYPEC_MUX_FSA4480=m
-CONFIG_TYPEC_MUX_WCD939X_USBSS=m
-CONFIG_QCOM_PMIC_GLINK=m
-CONFIG_BATTERY_QCOM_BATTMGR=m
-CONFIG_PHY_QCOM_EUSB2_REPEATER=m
-CONFIG_PHY_QCOM_SNPS_EUSB2=m
-CONFIG_ATH12K=m
-CONFIG_SND_SOC_LPASS_RX_MACRO=m
-CONFIG_SND_SOC_LPASS_TX_MACRO=m
-CONFIG_SND_SOC_SC8280XP=m
 CONFIG_SND_SOC_WCD938X=m
 CONFIG_SND_SOC_WCD938X_SDW=m
 CONFIG_SND_SOC_WCD939X=m
 CONFIG_SND_SOC_WCD939X_SDW=m
+CONFIG_SND_SOC_WSA881X=m
 CONFIG_SND_SOC_WSA884X=m
+CONFIG_SND_SOC_LPASS_WSA_MACRO=m
+CONFIG_SND_SOC_LPASS_VA_MACRO=m
+CONFIG_SND_SOC_LPASS_RX_MACRO=m
+CONFIG_SND_SOC_LPASS_TX_MACRO=m
+CONFIG_USB_ULPI_BUS=m
+CONFIG_USB_XHCI_PCI_RENESAS=m
+CONFIG_USB_OHCI_HCD=m
+CONFIG_USB_OHCI_HCD_PLATFORM=m
+# CONFIG_USB_DUMMY_HCD is not set
+# CONFIG_USB_DWC3_HAPS is not set
+# CONFIG_USB_DWC3_OF_SIMPLE is not set
+CONFIG_USB_GADGET_VBUS_DRAW=500
+CONFIG_TYPEC_QCOM_PMIC=m
 CONFIG_UCSI_PMIC_GLINK=m
-# SM8550 Bits
-CONFIG_PINCTRL_SM8550=m
-CONFIG_SM_DISPCC_8550=m
-CONFIG_SM_GCC_8550=m
-CONFIG_SM_TCSRCC_8550=m
-CONFIG_INTERCONNECT_QCOM_SM8550=m
-CONFIG_PINCTRL_SM8550_LPASS_LPI=m
-CONFIG_SM_GPUCC_8550=m
-CONFIG_SM_VIDEOCC_8550=m
+CONFIG_TYPEC_MUX_FSA4480=m
+CONFIG_TYPEC_MUX_NB7VPQ904M=m
+CONFIG_TYPEC_MUX_WCD939X_USBSS=m
+CONFIG_USB_ROLE_SWITCH=m
+CONFIG_MMC_SDHCI_MSM=m
+CONFIG_SCSI_UFS_QCOM=m
+CONFIG_LEDS_QCOM_LPG=m
+CONFIG_RTC_DRV_PM8XXX=m
+CONFIG_QCOM_BAM_DMA=m
+CONFIG_QCOM_GPI_DMA=m
+CONFIG_COMMON_CLK_QCOM=m
+CONFIG_QCOM_CLK_RPMH=m
+CONFIG_SDM_GPUCC_845=m
+CONFIG_SDM_VIDEOCC_845=m
+CONFIG_SDM_DISPCC_845=m
+CONFIG_SM_CAMCC_8450=m
 CONFIG_SM_CAMCC_8550=m
-# SM8650 Bits
-CONFIG_PINCTRL_SM8650=m
+CONFIG_SM_DISPCC_8250=m
+CONFIG_SM_DISPCC_8450=m
+CONFIG_SM_DISPCC_8550=m
 CONFIG_SM_DISPCC_8650=m
+CONFIG_SM_GCC_8250=m
+CONFIG_SM_GCC_8450=m
+CONFIG_SM_GCC_8550=m
 CONFIG_SM_GCC_8650=m
+CONFIG_SM_GPUCC_8250=m
+CONFIG_SM_GPUCC_8450=m
+CONFIG_SM_GPUCC_8550=m
 CONFIG_SM_GPUCC_8650=m
+CONFIG_SM_TCSRCC_8550=m
 CONFIG_SM_TCSRCC_8650=m
+CONFIG_SM_VIDEOCC_8250=m
+CONFIG_SM_VIDEOCC_8550=m
+CONFIG_SPMI_PMIC_CLKDIV=m
+CONFIG_CLK_GFM_LPASS_SM8250=m
+CONFIG_SM_VIDEOCC_8450=m
+CONFIG_HWSPINLOCK_QCOM=m
+CONFIG_QCOM_APCS_IPC=m
+CONFIG_QCOM_IPCC=m
+CONFIG_ARM_SMMU=m
+CONFIG_QCOM_RPROC_COMMON=m
+CONFIG_QCOM_Q6V5_COMMON=m
+CONFIG_QCOM_Q6V5_ADSP=m
+CONFIG_QCOM_Q6V5_MSS=m
+CONFIG_QCOM_Q6V5_PAS=m
+CONFIG_QCOM_Q6V5_WCSS=m
+CONFIG_QCOM_SYSMON=m
+CONFIG_RPMSG_CHAR=m
+CONFIG_RPMSG_NS=m
+CONFIG_RPMSG_QCOM_GLINK_RPM=m
+CONFIG_RPMSG_QCOM_GLINK_SMEM=m
+CONFIG_RPMSG_QCOM_SMD=m
+CONFIG_SOUNDWIRE=m
+CONFIG_SOUNDWIRE_QCOM=m
+CONFIG_QCOM_AOSS_QMP=m
+CONFIG_QCOM_COMMAND_DB=m
+CONFIG_QCOM_LLCC=m
+CONFIG_QCOM_PMIC_GLINK=m
+CONFIG_QCOM_RMTFS_MEM=m
+CONFIG_QCOM_RPMH=m
+CONFIG_QCOM_SMEM=m
+CONFIG_QCOM_SMP2P=m
+CONFIG_QCOM_SMSM=m
+CONFIG_QCOM_SOCINFO=m
+CONFIG_QCOM_SPM=m
+CONFIG_QCOM_APR=m
+CONFIG_QCOM_CPR=m
+CONFIG_QCOM_RPMHPD=m
+CONFIG_QCOM_SPMI_ADC5=m
+CONFIG_QCOM_PDC=m
+CONFIG_RESET_QCOM_AOSS=m
+CONFIG_RESET_QCOM_PDC=m
+CONFIG_PHY_QCOM_QMP=m
+CONFIG_PHY_QCOM_QUSB2=m
+CONFIG_PHY_QCOM_SNPS_EUSB2=m
+CONFIG_PHY_QCOM_EUSB2_REPEATER=m
+CONFIG_PHY_QCOM_USB_HS=m
+CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=m
+CONFIG_NVMEM_QCOM_QFPROM=m
+CONFIG_SLIMBUS=m
+CONFIG_SLIM_QCOM_NGD_CTRL=m
+CONFIG_INTERCONNECT_QCOM=y
+CONFIG_INTERCONNECT_QCOM_OSM_L3=m
+CONFIG_INTERCONNECT_QCOM_SDM845=m
+CONFIG_INTERCONNECT_QCOM_SM8250=m
+CONFIG_INTERCONNECT_QCOM_SM8450=m
+CONFIG_INTERCONNECT_QCOM_SM8550=m
 CONFIG_INTERCONNECT_QCOM_SM8650=m
-CONFIG_PINCTRL_SM8650_LPASS_LPI=m
-# SM8550 & SM8650 QRD Bits
-CONFIG_TOUCHSCREEN_GOODIX_BERLIN_CORE=m
-CONFIG_TOUCHSCREEN_GOODIX_BERLIN_SPI=m
-CONFIG_DRM_PANEL_VISIONOX_VTDR6130=m
