--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -11,7 +11,7 @@
 
 /* must add sc7180 into compatible machine or add cpu blocklist with sm7125 */
 / {
-	compatible = "xiaomi,joyeuse", "qcom,sm7125", "qcom,sc7180";
+	compatible = "xiaomi,joyeuse", "db845c", "qcom,sm7125", "qcom,sc7180";
 };
 
 /* that can protect ufs partition untouch */
@@ -61,4 +61,16 @@
 
 &remoteproc_mpss {
 	status = "okay";
+};
+
+&pm6150l_wled {
+	status = "disabled";
+};
+
+&panel0 {
+	/*
+	 * since wled crashed and above disabled it,
+	 * then panel backlight also need to disabled at once
+	 */
+	/delete-property/ backlight;
 };
