HACK: dts: qcom: pm6150(l): set reboot mode all to bootloader
Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/pm6150l.dtsi
+++ b/arch/arm64/boot/dts/qcom/pm6150l.dtsi
@@ -47,7 +47,7 @@
 			reg = <0x800>;
 			mode-bootloader = <0x2>;
 			mode-recovery = <0x2>;
-			mode-system = <0>;
+			mode-system = <0x2>;
 
 			pm6150l_pwrkey: pwrkey {
 				compatible = "qcom,pm8941-pwrkey";
