disable simple drm frame buffer display to avoid any sort of wrong ref before simple_drm->freedereno driver handover happened.
Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
@@ -6,6 +6,15 @@
 #include <dt-bindings/pinctrl/qcom,pmic-gpio.h>
 #include "sm7125-xiaomi-joyeuse.dts"
 
+
+/ {
+        chosen {
+                framebuffer@9c000000 {
+			status = "disabled";
+		};
+	};
+};
+
 &adreno_smmu {
         status = "okay";
 };
