dts: sm7125-xiaomi-joyeuse: Disable simple_drm driver
According to tests conducted, AOSP fail to boot into UI.

Test cases:
(a)Simple_drm + fredereno_drm both enabled -- fail
(b)only fredereno_drm enabled -- success
(c)only simple_drm -- not-test

Seemed like the drm driver transition to freedereno_drm might have some
difference with pure freedereno_drm only case. So disable simple_drm
when adreno is up and working.

Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
@@ -6,6 +6,18 @@
 #include <dt-bindings/pinctrl/qcom,pmic-gpio.h>
 #include "sm7125-xiaomi-joyeuse.dts"
 
+/* somehow added this can make AOSP boots into UI 
+ * looks like the simple_drm->freedereno_drm  transition 
+ * is not very fluid.
+ */
+/ {
+        chosen {
+                framebuffer@9c000000 {
+			status = "disabled";
+		};
+	};
+};
+
 &adreno_smmu {
         status = "okay";
 };
