dts: sm7125-xiaomi-joyeuse: Remove framebuffer format property
Due to testing fail on booting AOSP ui, previously work-around by disable
drm framebuffer. Later found out removing this "format" property
also works fine with AOSP ui and retain drm framebuffer.

So get the benefit by the both case, remove the format property.

Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
@@ -8,12 +8,12 @@
 
 /* somehow added this can make AOSP boots into UI 
  * looks like the simple_drm->freedereno_drm  transition 
- * is not very fluid.
+ * is not very fluid. Remove format property should do.
  */
 / {
         chosen {
                 framebuffer@9c000000 {
-			status = "disabled";
+			/delete-property/ format;
 		};
 	};
 };
