dts: qcom: xiaomi-joyeuse: Enable usb vbus regulator and type-c regulator
Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -46,6 +46,14 @@
 	status = "okay";
 };
 
+&pm6150_vbus {
+	status = "okay";
+};
+
+&pm6150_typec {
+	status = "okay";
+};
+
 &qupv3_id_0 {
 	status = "okay";
 };
