dts: qcom: xiaomi-joyeuse: Enable usb vbus regulator and type-c regulator
Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -40,6 +40,18 @@
 	status = "okay";
 };
 
+&pm6150_vbus {
+	regulator-min-microamp = <500000>;
+	regulator-max-microamp = <3000000>;
+	status = "okay";
+};
+
+&pm6150_typec {
+	vdd-vbus-supply = <&pm6150_vbus>;
+	vdd-pdphy-supply = <&vph_pwr>;	
+	status = "okay";
+};
+
 &qupv3_id_0 {
 	status = "okay";
 };
