dts: sm7125-xiaomi-joyeuse: Disable venus node to please icc driver
Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -84,3 +84,12 @@
 	 */
 	/delete-property/ backlight;
 };
+
+&usb_1_dwc3 {
+	vbus-supply = <&pm6150_vbus>;
+};
+
+/* disable it atm as it stuck the icc driver when fw not ready */
+&venus {
+	status = "disabled";
+};
