--- a/arch/arm64/boot/dts/qcom/pm6150.dtsi
+++ b/arch/arm64/boot/dts/qcom/pm6150.dtsi
@@ -44,8 +44,9 @@
 			compatible = "qcom,pm8998-pon";
 			reg = <0x800>;
 			mode-bootloader = <0x2>;
-			mode-recovery = <0x1>;
-			mode-system = <0>;
+			mode-recovery = <0x2>;
+			mode-system = <0x2>;
+			mode-shutdown = <0x2>;
 
 			pm6150_pwrkey: pwrkey {
 				compatible = "qcom,pm8941-pwrkey";
