dts: joyeuse: add missing includes
Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -1,3 +1,5 @@
+#include <dt-bindings/leds/common.h>
+#include <dt-bindings/usb/pd.h>
 #include "sm7125-xiaomi-joyeuse.dts"
 #include "sm7125-xiaomi-joyeuse-display.dts"
 #include "sm7125-xiaomi-joyeuse-touch.dts"
