--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-sound.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-sound.dts
@@ -14,161 +14,224 @@
 	};
 };
 
+&sound {
+	compatible = "qcom,sm8250-sndcard";
+	pinctrl-0 = <&ter_mi2s_active>;
+	pinctrl-names = "default";
+	model = "Xiaomi-miatoll";
+	audio-routing =
+		"IN1_HPHL", "HPHL_OUT",
+		"IN2_HPHR", "HPHR_OUT",
+		"AMIC1", "MIC BIAS1",
+		"AMIC2", "MIC BIAS2",
+		"AMIC3", "MIC BIAS3",
+		"TX SWR_ADC0", "ADC1_OUTPUT",
+		"TX SWR_ADC2", "ADC2_OUTPUT";
+
+	mm1-dai-link {
+		link-name = "MultiMedia1";
+		cpu {
+			sound-dai = <&q6asmdai MSM_FRONTEND_DAI_MULTIMEDIA1>;
+		};
+	};
+
+	mm2-dai-link {
+		link-name = "MultiMedia2";
+		cpu {
+			sound-dai = <&q6asmdai MSM_FRONTEND_DAI_MULTIMEDIA2>;
+		};
+	};
+
+	mm3-dai-link {
+		link-name = "MultiMedia3";
+		cpu {
+			sound-dai = <&q6asmdai MSM_FRONTEND_DAI_MULTIMEDIA3>;
+		};
+	};
+
+	i2s-dai-link {
+		link-name = "I2S Playback";
+		cpu {
+			sound-dai = <&q6afedai TERTIARY_MI2S_RX>;
+		};
+
+		platform {
+			sound-dai = <&q6routing>;
+		};
+
+		codec {
+			sound-dai = <&tas2562>;
+		};
+	};
+
+	wcd-playback-dai-link {
+		link-name = "WCD Playback";
+		cpu {
+			sound-dai = <&q6afedai RX_CODEC_DMA_RX_0>;
+		};
+
+		codec {
+			sound-dai = <&wcd937x 0>, <&swr1 0>, <&rxmacro 0>;
+		};
+
+		platform {
+			sound-dai = <&q6routing>;
+		};
+	};
+
+	wcd-capture-dai-link {
+		link-name = "WCD Capture";
+		cpu {
+			sound-dai = <&q6afedai TX_CODEC_DMA_TX_3>;
+		};
+
+		codec {
+			sound-dai = <&wcd937x 1>, <&swr2 0>, <&txmacro 0>;
+		};
+
+		platform {
+			sound-dai = <&q6routing>;
+		};
+	};
+};
+
+&swr1 {
+	status = "okay";
+
+	wcd_rx: codec@0,4 {
+		compatible = "sdw20217010a00";
+		reg = <0 4>;
+
+		qcom,rx-port-mapping = <1 2 3 4 5>;
+	};
+};
+
+&swr2 {
+	status = "okay";
+	wcd_tx: codec@0,3 {
+		compatible = "sdw20217010a00";
+		reg = <0 3>;
+
+		qcom,tx-port-mapping = <2 3 4 5>;
+	};
+};
+
 &q6afedai {
-        qi2s@20 {
-                reg = <TERTIARY_MI2S_RX>;
-                qcom,sd-lines = <0>;
-        };
+	dai@20 {
+		reg = <TERTIARY_MI2S_RX>;
+		qcom,sd-lines = <0>;
+	};
+
+	dai@113 {
+		reg = <RX_CODEC_DMA_RX_0>;
+	};
+
+	dai@120 {
+		reg = <TX_CODEC_DMA_TX_3>;
+	};
 };
 
 &q6asmdai {
-	status = "okay";
+	dai@0 {
+		reg = <0>;
+	};
 
-        dai@0 {
-                reg = <0>;
-        };
+	dai@1 {
+		reg = <1>;
+	};
 
-        dai@1 {
-                reg = <1>;
-        };
-
-        dai@2 {
-                reg = <2>;
-        };
-
-        dai@3 {
-                reg = <3>;
-        };
+	dai@2 {
+		reg = <2>;
+	};
 };
 
-#if 1
-/* use cpu or adsp */
+&qfprom {
+	vcc-supply = <&vreg_l11a_1p8>;
+};
+
+&rxmacro {
+	status = "okay";
+};
+
+&txmacro {
+	status = "okay";
+};
+
+&vamacro {
+	qcom,dmic-sample-rate = <600000>;
+	status = "okay";
+};
+
+&soc {
+	wcd937x: codec {
+		compatible = "qcom,wcd9375-codec";
+
+		reset-gpios = <&tlmm 58 GPIO_ACTIVE_LOW>;
+
+		pinctrl-names = "default", "sleep";
+		pinctrl-0 = <&wcd_reset_n>;
+		pinctrl-1 = <&wcd_reset_n_sleep>;
+
+		vdd-buck-supply = <&vreg_l15a_1p8>;
+		vdd-rxtx-supply = <&vreg_l10a_1p8>;
+		vdd-px-supply = <&vreg_l10a_1p8>;
+		vdd-mic-bias-supply = <&vreg_bob>;
+
+		qcom,micbias1-microvolt = <1800000>;
+		qcom,micbias2-microvolt = <1800000>;
+		qcom,micbias3-microvolt = <1800000>;
+		qcom,micbias4-microvolt = <1800000>;
+		qcom,mbhc-buttons-vthreshold-microvolt = <75000 150000 237000 500000 500000 500000 500000 500000>;
+		qcom,mbhc-headset-vthreshold-microvolt = <1700000>;
+		qcom,mbhc-headphone-vthreshold-microvolt = <50000>;
+		qcom,rx-device = <&wcd_rx>;
+		qcom,tx-device = <&wcd_tx>;
+
+		#sound-dai-cells = <1>;
+	};
+};
 
 &remoteproc_adsp {
 	memory-region = <&adsp_mem>;
-        firmware-name = "qcom/sm7125/miatoll/adsp.mbn";
+	firmware-name = "qcom/sm7125/miatoll/adsp.mbn";
 	status = "okay";
-};
-
-&sound {
-        compatible = "qcom,sm8250-sndcard";
-        pinctrl-0 = <&ter_mi2s_active>;
-        pinctrl-names = "default";
-        model = "POCO X3";
-
-        mm1-dai-link {
-                link-name = "MultiMedia1";
-                cpu {
-                        sound-dai = <&q6asmdai MSM_FRONTEND_DAI_MULTIMEDIA1>;
-                };
-        };
-
-        i2s-dai-link {
-                link-name = "I2S Playback";
-                cpu {
-                        sound-dai = <&q6afedai TERTIARY_MI2S_RX>;
-                };
-
-                platform {
-                        sound-dai = <&q6routing>;
-                };
-
-                codec {
-                        sound-dai = <&tas2562_9>;//, <&tas2562_4>;
-                };
-        };
-};
-
-#else
-
-&soc {
-    codec_dummy: codec_dummy {
-        compatible = "linux,snd-soc-dummy";
-        #sound-dai-cells = <0>;
-        status = "okay";
-    };
-
-    sound {
-        compatible = "simple-audio-card";
-        simple-audio-card,name = "DUMMY_SND";
-
-        simple-audio-card,format = "dsp_a";
-        simple-audio-card,bitclock-master = <&snd_cpu>;
-        simple-audio-card,frame-master = <&snd_cpu>;
-        simple-audio-card,mclk-fs = <512>;
-        status = "okay";
-
-        snd_cpu: simple-audio-card,cpu {
-            sound-dai = <&q6afedai TERTIARY_MI2S_RX>;
-            dai-tdm-slot-num = <2>;
-            dai-tdm-slot-width = <16>;
-        };
-
-        snd_codec: simple-audio-card,codec {
-		// sound-dai = <&codec_dummy>;
-            sound-dai = <&tas2562_9 0>, <&tas2562_4 0>;
-        };
-    };
-};
-
-#endif
-
-&i2c4 {
-        clock-frequency = <100000>;
-        status = "okay";
-
-        tas2562_4: codec@4c { /* SPK */
-		compatible = "ti,tas2562";
-		reg = <0x4c>;
-		#sound-dai-cells = <0>;
-		interrupt-parent = <&tlmm>;
-		interrupts = <33 IRQ_TYPE_NONE>;
-		shutdown-gpios = <&tlmm 51 GPIO_ACTIVE_HIGH>;
-		ti,imon-slot-no = <0>;
-		ti,vmon-slot-no = <2>;
-		sound-name-prefix = "Left";
-		status = "disabled";
-        };
 };
 
 &i2c9 {
-	clock-frequency = <100000>;
 	status = "okay";
+	clock-frequency = <100000>;
 
-	tas2562_9: codec@4c { /* SPK */
-		compatible = "ti,tas2562";
-		reg = <0x4c>;
-		#sound-dai-cells = <0>;
-		interrupt-parent = <&tlmm>;
-		interrupts = <33 IRQ_TYPE_NONE>;
-		shutdown-gpios = <&tlmm 51 GPIO_ACTIVE_HIGH>;
-		ti,imon-slot-no = <0>;
-		ti,vmon-slot-no = <2>;
-		sound-name-prefix = "Right";
+	tas2562: codec@4c {
+			compatible = "ti,tas2562";
+			reg = <0x4c>;
+			#sound-dai-cells = <0>;
+			interrupt-parent = <&tlmm>;
+			interrupts = <33 0>;
+			shutdown-gpios = <&tlmm 51 0>;
+			ti,vmon-slot-no = <2>;
+			ti,imon-slot-no = <0>;
+	};
+};
+
+&tlmm {
+	ter_mi2s_active: ter-mi2s-active-state {
+		pins = "gpio63", "gpio64", "gpio65", "gpio66";
+		function = "mi2s_2";
 	};
 
+	wcd_reset_n: wcd-reset-n-state {
+		pins = "gpio58";
+		function = "gpio";
+		drive-strength = <8>;
+	};
+
+	wcd_reset_n_sleep: wcd-reset-n-sleep-state {
+		pins = "gpio58";
+		function = "gpio";
+		drive-strength = <8>;
+		bias-disable;
+	};
 };
 
-&i2c4 {
-        dmas = <&gpi_dma0 0 4 QCOM_GPI_I2C>,
-                <&gpi_dma0 1 4 QCOM_GPI_I2C>;
-        dma-names = "tx", "rx";
-        status = "okay";
-};
-
-&i2c9 {
-        dmas = <&gpi_dma1 0 3 QCOM_GPI_I2C>,
-                <&gpi_dma1 1 3 QCOM_GPI_I2C>;
-        dma-names = "tx", "rx";
-        status = "okay";
-};
-
-&qupv3_id_0 {
-        status = "okay";
-};
-
-&qupv3_id_1 {
-        status = "okay";
-};
 
 #endif
