dts: joyeuse: Fix dts compile error
arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts:80.37-82.7: Warning (graph_endpoint): /soc@0/spmi@c440000/pmic@0/typec@1500/connector/ports/port@0/endpoint: graph connection to node '/soc@0/usb@a6f8800/usb@a600000/ports/port@0/endpoint' is not bidirectional

Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -151,6 +151,10 @@
 	};
 };
 
+&usb_1_dwc3_hs {
+        remote-endpoint = <&pm6150_role_switch_in>;
+};
+
 /* disable it atm as it stuck the icc driver when fw not ready */
 &venus {
 	status = "disabled";
