dts: sm7125-xiaomi-joyeuse: Remove charger node atm.
Since smbx charger driver is half-way to get it in so previously
Added charger node in pm6150.dtsi is not available atm.

Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -44,10 +44,10 @@
 	status = "okay";
 };
 
-&pm6150_charger {
-	monitored-battery = <&battery>;
-	status = "disabled";
-};
+//&pm6150_charger {
+//	monitored-battery = <&battery>;
+//	status = "disabled";
+//};
 
 &pm6150_typec {
 	vdd-vbus-supply = <&pm6150_vbus>;
