--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -1236,6 +1236,7 @@ config MEMFD_CREATE
 config MEMFD_ASHMEM_SHIM
 	bool "Memfd ashmem ioctl compatibility support"
 	depends on MEMFD_CREATE
+	default y
 	help
 	  This provides compatibility support for ashmem ioctl commands against
 	  memfd file descriptors. This is useful for compatibility on Android
