dts:sm7125-xiaomi-joyeuse-display: Re-enable memory-region for splashscreen
Previously there is no mdss reset mechanism so splashscreen memory region is
reserved to simple-framebuffer->->KMS/DRM handover. So KMS/DRM freedreno driver
will allocate another area for display use.

Now with reset mechanism the memory can be re-use now.

Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
@@ -63,14 +63,14 @@
 &mdp {
 	// TODO: check if mdss or mdp hold this memory
 	/* there was a handover problem happened to mdss probe */
-	//memory-region = <&cont_splash_mem>;
+	memory-region = <&cont_splash_mem>;
 
 	status = "okay";
 };
 
 &mdss {
 	// TODO: check if mdss or mdp hold this memory
-	//memory-region = <&cont_splash_mem>;
+	memory-region = <&cont_splash_mem>;
 
 	status = "okay";
 };
