dts:joyeuse: Introduce proxy-dsi-bridge between mdss and panel
The introduce of the proxy-bridge is to unify the phone variants
with at least two different panel model can now selected by GPIO.

Signed-off-by: George Chan <gchan9527@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -104,9 +104,9 @@
         status = "okay";
 };
 
-&touchscreen {
+//&touchscreen {
 //	status = "disabled";
-};
+//};
 
 &remoteproc_mpss {
 	status = "okay";
