dts:joyeuse-display: cant use mux-gpio property atm

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
@@ -113,7 +113,7 @@
 	#gpio-cells = <1>;
 
         compatible = "simple-dsi-bridge", "simple,dsi-bridge";
-	mux-gpio = <&gpio70_id0>;
+//	mux-gpio = <&gpio70_id0>;
 
 	status = "okay";
 
