make simple-bridge can loop with gpio value
testing gpio is cd-gpio from mmc atm

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-cust.dts
@@ -44,6 +44,11 @@
 	status = "okay";
 };
 
+/* i borrow this gpio to morph test board_id */
+&sdhc_2 {
+        /delete-property/ cd-gpios;
+};
+
 //&pm6150_charger {
 //	monitored-battery = <&battery>;
 //	status = "disabled";
