to make recovery ui working, simple-framebuffer need to disable

--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse-display.dts
@@ -13,7 +13,7 @@
 / {
         chosen {
                 framebuffer@9c000000 {
-//			/delete-property/ format;
+			/delete-property/ format;
 		};
 	};
 };
