--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -316,6 +316,17 @@ config DRM_SIMPLE_BRIDGE
 	  Support for non-programmable DRM bridges, such as ADI ADV7123, TI
 	  THS8134 and THS8135 or passive resistor ladder DACs.
 
+config DRM_SIMPLE_DSI_BRIDGE
+        tristate "Simple DSI DRM bridge support"
+        depends on OF
+        select DRM_KMS_HELPER
+        help
+          Support for proxy DRM bridges, such as DSI(Host)->DSI(Panels) by
+          GPIO value indication/selection.
+
+	  This driver is to model some phone variants with 2 panel varients
+	  and put all panel info into a single device tree source file.
+
 config DRM_THINE_THC63LVD1024
 	tristate "Thine THC63LVD1024 LVDS decoder bridge"
 	depends on OF
