--- a/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse.dts
+++ b/arch/arm64/boot/dts/qcom/sm7125-xiaomi-joyeuse.dts
@@ -3,6 +3,9 @@
  * Copyright (c) 2021, The Linux Foundation. All rights reserved.
  */
 
+#ifndef _SM7125_XIAOMI_JOYEUSE_DTS_
+#define _SM7125_XIAOMI_JOYEUSE_DTS_
+
 /dts-v1/;
 
 #include "sm7125-xiaomi-common.dtsi"
@@ -14,3 +17,4 @@
 	/* required for bootloader to select correct board */
 	qcom,board-id = <0x50022 1>;
 };
+#endif
